--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.14",
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -24,6 +25,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
+    "realm": "^10.8.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
