--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
     "realm": "^10.8.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "expo-ads-admob": "~10.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
